sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/IfTypeGuardPseudex.sand
pub class IfTypeGuardPseudex {
    foo() {
        (
            if let inline a = b() {
                c()
            } else {
                c();
                c()
            }
        )
    }
}